architectue_evolution/kubernetes/base/mime-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mime-server
spec:
  selector:
    app: mime-server
  ports:
  - port: 8000
    targetPort: 8000
