architectue_evolution/kubernetes/base/public-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-app
spec:
  selector:
    app: public-app
  ports:
  - port: 5000
    targetPort: 5000
